adding about us page

--- a/Tareas/Landing page/index.html
+++ b/Tareas/Landing page/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siman</title>
     <link rel="stylesheet" href="./assets/css/normalize.css">
-    <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <div class="header__siman">
             <!-- Logo -->
             <section class="logo-section">
-                <a class="logo">
+                <a class="logo" href="./index.html">
                     <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/logo22___088f447617aa37fc97a1e991ae908fe0.png"
                         alt="logo">
                 </a>
@@ -72,26 +72,31 @@
 
             <!-- Fashion -->
             <section class="fashion-section">
-                <div class="fashion-section__div">
-                    <div class="img-container woman-div">
-                        <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/2c2e188a-cdc6-430d-947c-aca0937c05e9___65d4392fd05244daf8a3d61369914221.jpg"
-                            alt="imagen promoción ropa para mujeres">
-                    </div>
-                    <div class="img-container man-div">
-                        <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/f10524b8-580a-4997-8a51-ec3015e5bf3a___a9a842217167ff6da36e0ca2ac17f0ca.jpg"
-                            alt="imagen moda para hombres">
-                    </div>
-                    <div class="img-container baby-div">
-                        <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/b422ae7f-3053-47d0-925e-e6a64ce83de2___fbb8b18a963090ee5fabb822586f53bd.jpg"
-                            alt="imagen moda para bebés">
-                    </div>
-                    <div class="img-container child-div">
-                        <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/f9de79ca-95e5-44ab-ade7-677cdba7feca___f54e126f45a51fed58c25a4fc450e069.jpg"
-                            alt="imagen moda para niños">
-                    </div>
-                    <div class="img-container accesories.div">
-                        <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/3a8c7461-76eb-4093-93df-0ace775b9b62___801249c61015a24455a48097e7885694.jpg"
-                            alt="imagen accesorios">
+                <div class="section__title">
+                    <h2>Las mejores promociones en moda</h2>
+                </div>
+                <div class="section__container">
+                    <div class="fashion-section__div">
+                        <div class="img-container woman-div">
+                            <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/2c2e188a-cdc6-430d-947c-aca0937c05e9___65d4392fd05244daf8a3d61369914221.jpg"
+                                alt="imagen promoción ropa para mujeres">
+                        </div>
+                        <div class="img-container man-div">
+                            <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/f10524b8-580a-4997-8a51-ec3015e5bf3a___a9a842217167ff6da36e0ca2ac17f0ca.jpg"
+                                alt="imagen moda para hombres">
+                        </div>
+                        <div class="img-container baby-div">
+                            <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/b422ae7f-3053-47d0-925e-e6a64ce83de2___fbb8b18a963090ee5fabb822586f53bd.jpg"
+                                alt="imagen moda para bebés">
+                        </div>
+                        <div class="img-container child-div">
+                            <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/f9de79ca-95e5-44ab-ade7-677cdba7feca___f54e126f45a51fed58c25a4fc450e069.jpg"
+                                alt="imagen moda para niños">
+                        </div>
+                        <div class="img-container accesories.div">
+                            <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/3a8c7461-76eb-4093-93df-0ace775b9b62___801249c61015a24455a48097e7885694.jpg"
+                                alt="imagen accesorios">
+                        </div>
                     </div>
                 </div>
 
@@ -99,7 +104,7 @@
 
             <!-- Discount -->
             <section class="discount-section">
-                <div class="discount-section__title">
+                <div class="section__title">
                     <h2>Hasta 50% de descuento en productos seleccionados</h2>
                 </div>
                 <div class="discount-section-container">
@@ -242,36 +247,46 @@
 
             <!-- Home -->
             <section class="home-section">
-                <div class="home-section__content">
-                    <div class="img-container ">
-                        <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/48914230-0141-48d2-947f-c6fecc9826e5___4656cde8e3c19d9707f398f24ff160c8.jpg"
-                            alt="promociones de decoraciones">
-                    </div>
-                    <div class="img-container ">
-                        <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/f5819cc6-c14f-4158-80c2-ab9c5c218b5f___a68b70cef30f8531cae65b709698e819.jpg"
-                            alt="promoción renueva tu hogar">
-                    </div>
-                    <div class="img-container bed-principal-image">
-                        <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/d8838170-030f-4c86-85e9-ae53482b7365___73cb4f959a15ccd8ce5fe38e48bab257.jpg"
-                            alt="promociones en camas capri">
+                <div class="section__title">
+                    <h2>El sueño perfecto a precios de ensueño</h2>
+                </div>
+                <div class="section__container">
+                    <div class="home-section__content">
+                        <div class="img-container ">
+                            <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/48914230-0141-48d2-947f-c6fecc9826e5___4656cde8e3c19d9707f398f24ff160c8.jpg"
+                                alt="promociones de decoraciones">
+                        </div>
+                        <div class="img-container ">
+                            <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/f5819cc6-c14f-4158-80c2-ab9c5c218b5f___a68b70cef30f8531cae65b709698e819.jpg"
+                                alt="promoción renueva tu hogar">
+                        </div>
+                        <div class="img-container bed-principal-image">
+                            <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/d8838170-030f-4c86-85e9-ae53482b7365___73cb4f959a15ccd8ce5fe38e48bab257.jpg"
+                                alt="promociones en camas capri">
+                        </div>
                     </div>
                 </div>
             </section>
 
             <!-- Electronics -->
             <section class="electronics-section">
-                <div class="electronics-section__content">
-                    <div class="img-container audifonos-principal">
-                        <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/b9195fe3-8dd9-40a7-86a5-38212228249f___29e3351cb1e6b1981a916dfd5396a228.jpg"
-                            alt="promociones en audifonos">
-                    </div>
-                    <div class="img-container">
-                        <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/00596f33-5c06-4f91-ae9f-177b8d52ce54___b768796bf2c5197b5715743ffc6d741b.jpg"
-                            alt="promoción laptop hp">
-                    </div>
-                    <div class="img-container">
-                        <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/c6124ee2-f4d2-43e7-9d83-95d917fe5a76___4897439b556a7ab31f5ff94d52241ba5.jpg"
-                            alt="promociones de ventiladores">
+                <div class="section__title">
+                    <h2>Precios bajos en alta tecnología</h2>
+                </div>
+                <div class="section__container">
+                    <div class="electronics-section__content">
+                        <div class="img-container audifonos-principal">
+                            <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/b9195fe3-8dd9-40a7-86a5-38212228249f___29e3351cb1e6b1981a916dfd5396a228.jpg"
+                                alt="promociones en audifonos">
+                        </div>
+                        <div class="img-container">
+                            <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/00596f33-5c06-4f91-ae9f-177b8d52ce54___b768796bf2c5197b5715743ffc6d741b.jpg"
+                                alt="promoción laptop hp">
+                        </div>
+                        <div class="img-container">
+                            <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/c6124ee2-f4d2-43e7-9d83-95d917fe5a76___4897439b556a7ab31f5ff94d52241ba5.jpg"
+                                alt="promociones de ventiladores">
+                        </div>
                     </div>
                 </div>
             </section>
@@ -319,7 +334,7 @@
                     <!-- Siman corporative -->
                     <section class="corporative-section info-sections">
                         <h2>Siman Corporativo</h2>
-                        <a href="#">Quiénes Somos</a>
+                        <a href="./about-us.html">Quiénes Somos</a>
                         <a href="#">Visión y Misión</a>
                         <a href="#">Historia</a>
                         <a href="#">Sucursales</a>
