--- a/Tareas/Landing page/product.html
+++ b/Tareas/Landing page/product.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
     <!-- Header -->
     <header class="header">
         <!-- Siman header part -->
@@ -20,7 +19,7 @@
             <section class="logo-section">
                 <a class="logo" href="./index.html">
                     <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/logo22___088f447617aa37fc97a1e991ae908fe0.png"
-                        alt="logo" >
+                        alt="logo">
                 </a>
             </section>
 
@@ -60,54 +59,6 @@
 
     <main class="main-content">
 
-        <section class="about-us">
-            <div class="about-us__title">
-                <h1><span>Siman </span> Corporativo</h1>
-            </div>
-
-            <div class="abouts-us__img-container">
-                <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/03c1847b-bd7e-4401-beb9-5079e33570eb___346e45d668e96809999e9616a4b55639.jpg"
-                    alt="imagen antigua de siman">
-            </div>
-
-            <div class="about-us-content">
-
-                <div class="about-us-content__text">
-                    <div class="who-we-are">
-                        <h2>¿Quiénes somos?</h2>
-                        <p>El retail más importante y relevante en Centroamérica, fundada el 8 de diciembre de 1921 en
-                            San Salvador por José J. Simán.</p>
-                        <p>Nuestros 99 años han forjado una compañía líder, operando en las principales ciudades de El
-                            Salvador, San José, Costa Rica; Managua, Nicaragua y Ciudad de Guatemala, Guatemala.</p>
-                    </div>
-
-                    <div class="essence">
-                        <h2>Esencia</h2>
-                        <p>La mejor experiencia en cada visita.</p>
-                    </div>
-
-                    <div class="values">
-                        <h2>Valores</h2>
-                        <ul>
-                            <li>Responsabilidad</li>
-                            <li>Honestidad</li>
-                            <li>Respeto</li>
-                            <li>Solidaridad</li>
-                            <li>Integrid</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="about-us-content__image">
-                    <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/39abbc42-60bc-4fd7-89f5-ec7d756243b6___dd40497046ee2609ecc9d3e9d157cf5f.jpg"
-                        alt="comunicado de prensa">
-
-                </div>
-
-            </div>
-
-        </section>
-
         <!-- Info section -->
         <section class="info-section">
             <div class="info-section__content">
@@ -145,6 +96,8 @@
 
                 </section>
 
+
+                <!-- Info section -->
                 <section class="about-section ">
                     <!-- Siman corporative -->
                     <section class="corporative-section info-sections">
