adding and finish product page

--- a/Tareas/Landing page/about-us.html
+++ b/Tareas/Landing page/about-us.html
@@ -19,7 +19,7 @@
             <!-- Logo -->
             <section class="logo-section">
                 <a class="logo" href="./index.html">
-                    <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/logo22___088f447617aa37fc97a1e991ae908fe0.png"
+                    <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/cfd36ba9-4b77-4f49-84c3-9e2f9c363cc8___19999b42961a45dbb2f4293973939c0b.svg"
                         alt="logo" >
                 </a>
             </section>
