--- a/Tareas/Landing page/index.html
+++ b/Tareas/Landing page/index.html
@@ -18,7 +18,7 @@
             <!-- Logo -->
             <section class="logo-section">
                 <a class="logo" href="./index.html">
-                    <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/logo22___088f447617aa37fc97a1e991ae908fe0.png"
+                    <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/cfd36ba9-4b77-4f49-84c3-9e2f9c363cc8___19999b42961a45dbb2f4293973939c0b.svg"
                         alt="logo">
                 </a>
             </section>
@@ -109,139 +109,150 @@
                 </div>
                 <div class="discount-section-container">
                     <!--product container-->
-                    <div class="product-container">
-                        <img src="https://siman.vtexassets.com/arquivos/ids/5379550-1600-auto?v=638482917158430000&width=1600&height=auto&aspect=true"
-                            alt="Celular Samsung A15">
-                        <div class="product-container__info">
-                            <div class="product-container__info-title">
-                                <h3 class="product-container__info-brand">Samsung</h3>
-                                <h2 class="product-container__info-product">Celular Samsung A15 8GB RAM + 256GB ROM 5G
-                                </h2>
-                            </div>
-                            <p class="product-container__info-sellby">Vendido por <span>Siman</span></p>
-                            <p class="product-container__info-price">$219.00</p>
-                            <p class="product-container__info-previousprice">$319.00</p>
-                            <div class="coutesy-container">
-                                <p class="product-container__info-coutesy">6 cuotas</p>
-                            </div>
-                            <div class="button-container">
-                                <button class="button">Agregar al carrito</button>
+                    <a href="/product.html">
+                        <div class="product-container">
+                            <img src="https://siman.vtexassets.com/arquivos/ids/5379550-1600-auto?v=638482917158430000&width=1600&height=auto&aspect=true"
+                                alt="Celular Samsung A15">
+                            <div class="product-container__info">
+                                <div class="product-container__info-title">
+                                    <h3 class="product-container__info-brand">Samsung</h3>
+                                    <h2 class="product-container__info-product">Celular Samsung A15 8GB RAM + 256GB ROM
+                                        5G
+                                    </h2>
+                                </div>
+                                <p class="product-container__info-sellby">Vendido por <span>Siman</span></p>
+                                <p class="product-container__info-price">$219.00</p>
+                                <p class="product-container__info-previousprice">$319.00</p>
+                                <div class="coutesy-container">
+                                    <p class="product-container__info-coutesy">6 cuotas</p>
+                                </div>
+                                <div class="button-container">
+                                    <button class="button">Agregar al carrito</button>
+                                </div>
                             </div>
                         </div>
-                    </div>
-
+                    </a>
                     <!--product container-->
-                    <div class="product-container">
-                        <img src="https://siman.vtexassets.com/arquivos/ids/5871897-1600-auto?v=638544266089270000&width=1600&height=auto&aspect=true"
-                            alt="Tablet Samsung S9 FE">
-                        <div class="product-container__info">
-                            <div class="product-container__info-title">
-                                <h3 class="product-container__info-brand">Samsung</h3>
-                                <h2 class="product-container__info-product">Tablet Samsung Galaxy Tab S9 FE 8GB RAM +
-                                    128GB
-                                    ROM
-                                </h2>
-                            </div>
-                            <p class="product-container__info-sellby">Vendido por <span>Siman</span></p>
-                            <p class="product-container__info-price">$559.00</p>
-                            <p class="product-container__info-previousprice">$829.00</p>
-                            <div class="coutesy-container">
-                                <p class="product-container__info-coutesy">6 cuotas</p>
-                            </div>
-                            <div class="button-container">
-                                <button class="button">Agregar al carrito</button>
+                    <a href="/product.html">
+                        <div class="product-container">
+                            <img src="https://siman.vtexassets.com/arquivos/ids/5871897-1600-auto?v=638544266089270000&width=1600&height=auto&aspect=true"
+                                alt="Tablet Samsung S9 FE">
+                            <div class="product-container__info">
+                                <div class="product-container__info-title">
+                                    <h3 class="product-container__info-brand">Samsung</h3>
+                                    <h2 class="product-container__info-product">Tablet Samsung Galaxy Tab S9 FE 8GB RAM
+                                        +
+                                        128GB
+                                        ROM
+                                    </h2>
+                                </div>
+                                <p class="product-container__info-sellby">Vendido por <span>Siman</span></p>
+                                <p class="product-container__info-price">$559.00</p>
+                                <p class="product-container__info-previousprice">$829.00</p>
+                                <div class="coutesy-container">
+                                    <p class="product-container__info-coutesy">6 cuotas</p>
+                                </div>
+                                <div class="button-container">
+                                    <button class="button">Agregar al carrito</button>
+                                </div>
                             </div>
                         </div>
-                    </div>
-
+                    </a>
                     <!--product container-->
-                    <div class="product-container">
-                        <img src="https://siman.vtexassets.com/arquivos/ids/5980838-1600-auto?v=638575094671830000&width=1600&height=auto&aspect=true"
-                            alt="Smartwatch Samsung Galaxy watch FE">
-                        <div class="product-container__info">
-                            <div class="product-container__info-title">
-                                <h3 class="product-container__info-brand">Samsung</h3>
-                                <h2 class="product-container__info-product">Smartwatch Samsung Galaxy watch FE 40mm</h2>
-                            </div>
-                            <p class="product-container__info-sellby">Vendido por <span>Siman</span></p>
-                            <p class="product-container__info-price">$169.00</p>
-                            <p class="product-container__info-previousprice">$149.00</p>
-                            <div class="coutesy-container">
-                                <p class="product-container__info-coutesy">6 cuotas</p>
-                            </div>
-                            <div class="button-container">
-                                <button class="button">Agregar al carrito</button>
+                    <a href="/product.html">
+                        <div class="product-container">
+                            <img src="https://siman.vtexassets.com/arquivos/ids/5980838-1600-auto?v=638575094671830000&width=1600&height=auto&aspect=true"
+                                alt="Smartwatch Samsung Galaxy watch FE">
+                            <div class="product-container__info">
+                                <div class="product-container__info-title">
+                                    <h3 class="product-container__info-brand">Samsung</h3>
+                                    <h2 class="product-container__info-product">Smartwatch Samsung Galaxy watch FE 40mm
+                                    </h2>
+                                </div>
+                                <p class="product-container__info-sellby">Vendido por <span>Siman</span></p>
+                                <p class="product-container__info-price">$169.00</p>
+                                <p class="product-container__info-previousprice">$149.00</p>
+                                <div class="coutesy-container">
+                                    <p class="product-container__info-coutesy">6 cuotas</p>
+                                </div>
+                                <div class="button-container">
+                                    <button class="button">Agregar al carrito</button>
+                                </div>
                             </div>
                         </div>
-                    </div>
-
+                    </a>
                     <!--product container-->
-                    <div class="product-container">
-                        <img src="https://siman.vtexassets.com/arquivos/ids/4883862-1600-auto?v=638344663595430000&width=1600&height=auto&aspect=true"
-                            alt="Audífono Galaxy buds FE">
-                        <div class="product-container__info">
-                            <div class="product-container__info-title">
-                                <h3 class="product-container__info-brand">Samsung</h3>
-                                <h2 class="product-container__info-product">Audífono TWS Galaxy buds FE gris</h2>
-                            </div>
-                            <p class="product-container__info-sellby">Vendido por <span>Siman</span></p>
-                            <p class="product-container__info-price">$85.00</p>
-                            <p class="product-container__info-previousprice">$89.00</p>
-                            <div class="coutesy-container">
-                                <p class="product-container__info-coutesy">6 cuotas</p>
-                            </div>
-                            <div class="button-container">
-                                <button class="button">Agregar al carrito</button>
+                    <a href="/product.html">
+                        <div class="product-container">
+                            <img src="https://siman.vtexassets.com/arquivos/ids/4883862-1600-auto?v=638344663595430000&width=1600&height=auto&aspect=true"
+                                alt="Audífono Galaxy buds FE">
+                            <div class="product-container__info">
+                                <div class="product-container__info-title">
+                                    <h3 class="product-container__info-brand">Samsung</h3>
+                                    <h2 class="product-container__info-product">Audífono TWS Galaxy buds FE gris</h2>
+                                </div>
+                                <p class="product-container__info-sellby">Vendido por <span>Siman</span></p>
+                                <p class="product-container__info-price">$85.00</p>
+                                <p class="product-container__info-previousprice">$89.00</p>
+                                <div class="coutesy-container">
+                                    <p class="product-container__info-coutesy">6 cuotas</p>
+                                </div>
+                                <div class="button-container">
+                                    <button class="button">Agregar al carrito</button>
+                                </div>
                             </div>
                         </div>
-                    </div>
-
+                    </a>
                     <!--product container-->
-                    <div class="product-container">
-                        <img src="https://siman.vtexassets.com/arquivos/ids/6026561-1600-auto?v=638592427716430000&width=1600&height=auto&aspect=true"
-                            alt="Pantalla Samsung Crystal">
-                        <div class="product-container__info">
-                            <div class="product-container__info-title">
-                                <h3 class="product-container__info-brand">Samsung</h3>
-                                <h2 class="product-container__info-product">Pantalla Samsung Crystal 2024 LED smart 43"
-                                    UHD/4K
-                                </h2>
-                            </div>
-                            <p class="product-container__info-sellby">Vendido por <span>Siman</span></p>
-                            <p class="product-container__info-price">$349.00</p>
-                            <p class="product-container__info-previousprice">$429.00</p>
-                            <div class="coutesy-container">
-                                <p class="product-container__info-coutesy">6 cuotas</p>
-                            </div>
-                            <div class="button-container">
-                                <button class="button">Agregar al carrito</button>
+                    <a href="/product.html">
+                        <div class="product-container">
+                            <img src="https://siman.vtexassets.com/arquivos/ids/6026561-1600-auto?v=638592427716430000&width=1600&height=auto&aspect=true"
+                                alt="Pantalla Samsung Crystal">
+                            <div class="product-container__info">
+                                <div class="product-container__info-title">
+                                    <h3 class="product-container__info-brand">Samsung</h3>
+                                    <h2 class="product-container__info-product">Pantalla Samsung Crystal 2024 LED smart
+                                        43"
+                                        UHD/4K
+                                    </h2>
+                                </div>
+                                <p class="product-container__info-sellby">Vendido por <span>Siman</span></p>
+                                <p class="product-container__info-price">$349.00</p>
+                                <p class="product-container__info-previousprice">$429.00</p>
+                                <div class="coutesy-container">
+                                    <p class="product-container__info-coutesy">6 cuotas</p>
+                                </div>
+                                <div class="button-container">
+                                    <button class="button">Agregar al carrito</button>
+                                </div>
                             </div>
                         </div>
-                    </div>
-
+                    </a>
                     <!--product container-->
-                    <div class="product-container">
-                        <img src="https://siman.vtexassets.com/arquivos/ids/5481830-1600-auto?v=638503501407800000&width=1600&height=auto&aspect=true"
-                            alt="Pantalla Samsung Crystal">
-                        <div class="product-container__info">
-                            <div class="product-container__info-title">
-                                <h3 class="product-container__info-brand">Samsung</h3>
-                                <h2 class="product-container__info-product">Cargador fast charger type-C con cable 25w
-                                    negro
-                                </h2>
-                            </div>
-                            <p class="product-container__info-sellby">Vendido por <span>Siman</span></p>
-                            <p class="product-container__info-price">$30.00</p>
-                            <p class="product-container__info-previousprice">$45.00</p>
-                            <div class="coutesy-container">
-                                <p class="product-container__info-coutesy">6 cuotas</p>
-                            </div>
-                            <div class="button-container">
-                                <button class="button">Agregar al carrito</button>
+                    <a href="/product.html">
+                        <div class="product-container">
+                            <img src="https://siman.vtexassets.com/arquivos/ids/5481830-1600-auto?v=638503501407800000&width=1600&height=auto&aspect=true"
+                                alt="Pantalla Samsung Crystal">
+                            <div class="product-container__info">
+                                <div class="product-container__info-title">
+                                    <h3 class="product-container__info-brand">Samsung</h3>
+                                    <h2 class="product-container__info-product">Cargador fast charger type-C con cable
+                                        25w
+                                        negro
+                                    </h2>
+                                </div>
+                                <p class="product-container__info-sellby">Vendido por <span>Siman</span></p>
+                                <p class="product-container__info-price">$30.00</p>
+                                <p class="product-container__info-previousprice">$45.00</p>
+                                <div class="coutesy-container">
+                                    <p class="product-container__info-coutesy">6 cuotas</p>
+                                </div>
+                                <div class="button-container">
+                                    <button class="button">Agregar al carrito</button>
+                                </div>
                             </div>
                         </div>
-                    </div>
-
+                    </a>
                 </div>
             </section>
 
