finalized product page and refactoring some code

--- a/Tareas/Landing page/about-us.html
+++ b/Tareas/Landing page/about-us.html
@@ -20,7 +20,7 @@
             <section class="logo-section">
                 <a class="logo" href="./index.html">
                     <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/cfd36ba9-4b77-4f49-84c3-9e2f9c363cc8___19999b42961a45dbb2f4293973939c0b.svg"
-                        alt="logo" >
+                        alt="logo">
                 </a>
             </section>
 
@@ -60,6 +60,7 @@
 
     <main class="main-content">
 
+        <!-- Abouts us section -->
         <section class="about-us">
             <div class="about-us__title">
                 <h1><span>Siman </span> Corporativo</h1>
@@ -73,6 +74,7 @@
             <div class="about-us-content">
 
                 <div class="about-us-content__text">
+                    <!-- Who we are div -->
                     <div class="who-we-are">
                         <h2>¿Quiénes somos?</h2>
                         <p>El retail más importante y relevante en Centroamérica, fundada el 8 de diciembre de 1921 en
@@ -81,11 +83,13 @@
                             Salvador, San José, Costa Rica; Managua, Nicaragua y Ciudad de Guatemala, Guatemala.</p>
                     </div>
 
+                    <!-- Essence div -->
                     <div class="essence">
                         <h2>Esencia</h2>
                         <p>La mejor experiencia en cada visita.</p>
                     </div>
 
+                    <!-- Values div -->
                     <div class="values">
                         <h2>Valores</h2>
                         <ul>
@@ -98,6 +102,7 @@
                     </div>
                 </div>
 
+                <!-- Img div -->
                 <div class="about-us-content__image">
                     <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/39abbc42-60bc-4fd7-89f5-ec7d756243b6___dd40497046ee2609ecc9d3e9d157cf5f.jpg"
                         alt="comunicado de prensa">
