--- a/Tareas/Landing page/product.html
+++ b/Tareas/Landing page/product.html
@@ -79,6 +79,7 @@
                     </div>
                 </div>
 
+                <!--Product especs-->
                 <div class="full-product__especs">
                     <div class="full-product__especifications">
                         <div class="full-product__especifications-list">
@@ -97,6 +98,7 @@
                         </div>
                     </div>
 
+                    <!-- Send Buttons -->
                     <div class="full-product__buttons">
                         <div class="envios">
                             <p><i class="bi bi-truck"></i>Envio a domicilio</p>
@@ -106,6 +108,7 @@
                         </div>
                     </div>
                 </div>
+                <!--Buy div-->
                 <div class="full-product__buy">
                     <div class="full-product__buy-number">
                         <div class="full-product__buy-input">
@@ -118,6 +121,7 @@
                         </div>
                     </div>
 
+                    <!-- Warranty div -->
                     <div class="full-product__warranty">
                         <h2>SIMAN PRO</h2>
                         <p>Protege tu producto</p>
@@ -143,6 +147,7 @@
 
             </div>
 
+            <!-- Details div -->
             <div class="full-product__details">
                 <div class="full-product__description">
                     <div class="description-title">
@@ -194,6 +199,7 @@
                         instante, incluso funciona cuando se envía a dispositivos que no son Galaxy.</p>
                 </div>
 
+                <!-- Details table -->
                 <div class="product-details">
                     <div class="description-title">
                         <h2>Detalles del producto</h2>
@@ -275,6 +281,7 @@
             </div>
         </section>
 
+        <!-- Products section -->
         <div class="products-section">
             <section class="discount-section">
                 <div class="discount-section-container">
