--- a/Tareas/Creación de una página web utilizando el DOM/index.html
+++ b/Tareas/Creación de una página web utilizando el DOM/index.html
@@ -10,8 +10,12 @@
 </head>
 
 <body>
+    
+    <!--Header-->
     <header class="header">
         <h1>Blog de Videojuegos</h1>
+        
+        <!--Navbar-->
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
@@ -22,13 +26,19 @@
             </ul>
         </nav>
     </header>
+
+    <!--Main-->
     <main>
+
+        <!--Main content-->
         <section class="main-content main-content-background" id="main-content">
             <h1>Bienvenido a nuestro blog de videojuegos</h1>
             <p>Explora las últimas noticias, reviews y contenido relacionado con el mundo de los videojuegos.</p>
             <button class="main-btn default-btn" id="main-btn">Cambiar color de fondo</button>
         </section>
         <section class="content">
+
+            <!--Reviews article-->
             <article class="game-review">
                 <h2>The Legend of Zelda Ocarina of Time</h2>
                 <img src="./assets/img/zelda1.jpg" alt="Imagen de la review" id="game-review-img">
@@ -47,9 +57,10 @@
                     </div>
                 </div>
             </article>
-            <!-- Contenido dinámico generado con JS -->
         </section>
     </main>
+
+    <!--Subscribe section-->
     <section class="subscribe-section">
         <h2>Suscríbete a nuestro boletín</h2>
         <p>Recibe las últimas noticias y actualizaciones directamente en tu correo electrónico.</p>
@@ -58,9 +69,12 @@
             <button type="submit" class="default-btn">Suscribirse</button>
         </form>
     </section>
+
+    <!--Footer-->
     <footer>
         <p>&copy; 2023 Blog de Videojuegos</p>
     </footer>
+
     <script src="./assets/js/script.js"></script>
 </body>
 
